--- a/src/index.css
+++ b/src/index.css
@@ -7,10 +7,13 @@
   font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
   font-weight: 400;
+  --rounded: 20px;
+
+  --important: rgb(11, 255, 214);
 
   color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
+  --foreground: rgba(255, 255, 255, 0.87);
+  --background: #242424;
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
@@ -28,10 +31,7 @@ a:hover {
 }
 
 body {
-  margin: 0;
-  display: flex;
-  place-items: center;
-  min-width: 320px;
+
   min-height: 100vh;
 }
 
@@ -61,8 +61,8 @@ button:focus-visible {
 
 @media (prefers-color-scheme: light) {
   :root {
-    color: #213547;
-    background-color: #ffffff;
+    --foreground: #213547;
+    --background: #ffffff;
   }
   a:hover {
     color: #747bff;
